This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------

2006-12-01
   * No changes, but regenerate the manual because the examples showed
     a change in tick/label counts at 5.0rc3 and this has been patched.

2006-11-29
   * Add new example bars4 showing bar chart data labels.
   * Fix notes comment at top of examples.xml: remove obsolete info on
     scaling of pictures for PDF output. Add notes on example order and
     referencing.

2006-11-28

   * Default 'time' format was fixed at 5.0rc3 as %H:%M:%S.
   * Found and fixed more references to "no Y data labels".

2006-11-27 Changes to catch up to 5.0rc3 release:

   * Update PHP version requirement. Min is 4.3.0 (not 4.2); PHP5 works; always
     use the latest versions.
   * Updated text to more closely match the release README file instructions,
     including ZIP file availability and no TrueType fonts included.
   * Delete note about "included examples and documentation", as they are no
     longer included in the release.

   * Changed 3 examples that use random data to seed the generator with a
     fixed value. So now the graphs won't change and file compares work.

   * Note how to get borderless, unshaded bars with SetDataBorderColors.

   * Document new values in SetPointShapes and SetLineStyles to suppress
     point markers or lines for individual datasets in 'linepoints' plots.
     (New feature in 5.0rc3)

   * Document new bar chart data labels with SetYDataLabelPos('plotin').

   * Add reference to another image viewer: qiv.


2006-11-11 Released manual dated 2006-11-11 to Sourceforge.net

2006-09-24

   Reorganized. Reference section is now alphabetically by function,